test/programs/valid/types/byte.java
protected class A {
  public A() {}
  protected byte x;
}

