test/programs/invalid/method_structure/multiple_variables_per_declaration.java
protected class A {
  public int x,y,z;
}
